# sp_ws

./: README.md
install/: local_setup.sh  setup.sh
install/cartographer_slam/share/cartographer_slam/: package.dsv  package.ps1  package.sh  package.xml
install/cartographer_slam/share/cartographer_slam/config/: cartographer.lua
install/cartographer_slam/share/cartographer_slam/launch/: cartographer.launch.py
install/communication/share/communication/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/communication/share/communication/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  communicationConfig-version.cmake  communicationConfig.cmake  communication__rosidl_typesupport_cppExport-noconfig.cmake  export_communication__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_communication__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/communication/share/communication/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/communication/share/communication/msg/: ActuatorCmds.idl  ActuatorCmds.msg  MotionCommands.idl  MotionCommands.msg  TouchSensor.idl  TouchSensor.msg
install/communication/share/communication/srv/: GaitSwitch.idl  GaitSwitch.srv  GaitSwitch_Request.msg  GaitSwitch_Response.msg  SimulationReset.idl  SimulationReset.srv  SimulationReset_Request.msg  SimulationReset_Response.msg
install/control_robo/share/control_robo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/control_robo/share/control_robo/cmake/: control_roboConfig-version.cmake  control_roboConfig.cmake
install/control_robo/share/control_robo/environment/: ament_prefix_path.dsv  path.dsv
install/control_robo/share/control_robo/launch/: robot_control.launch.py
install/core/include/core/: Types.h
install/core/include/core/misc/: Benchmark.h  Buffer.h  LinearAlgebra.h  LoadData.h  Lookup.h  NumericTraits.h  Numerics.h
install/core/share/core/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/core/share/core/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_targets-extras.cmake  coreConfig-version.cmake  coreConfig.cmake
install/core/share/core/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/description/share/description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/description/share/description/cmake/: descriptionConfig-version.cmake  descriptionConfig.cmake
install/ik_pkg/lib/ik_pkg/: leg_run_2  test_mod.py  tf_pub.py  tre_jec_2.py
install/ik_pkg/share/ik_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mujoco/lib/mujoco/: simulation
install/mujoco/share/mujoco/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
install/navigation/lib/navigation/: multi_goal  single_goal  tf_node
install/navigation/share/navigation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/cartographer_slam/: package.xml  setup.py
src/cartographer_slam/config/: cartographer.lua
src/control_robo/: CMakeLists.txt  package.xml
src/control_robo/launch/: robot_control.launch.py
src/description/: CMakeLists.txt
src/description/config/: rviz.rviz  rviz_2.rviz
src/ik_pkg/: CMakeLists.txt  package.xml
src/ik_pkg/launch/: pose_pub.launch.py
src/ik_pkg/scripts/: mp_o_tf.py  pub_mod.py  test_mod.py  tf_pub.py  tre_jec_2.py
src/ik_pkg/src/: ik_solver_numerical.cpp
src/navigation/: CMakeLists.txt
src/navigation/config/: ekf.yaml  params.yaml
src/navigation/launch/: bringup.launch.py  bringup_real_robo.launch.py  ekf.launch.py  navigation.launch.py  wd_world.launch.py
src/navigation/map/: nv7_map.pgm  nv7_map.yaml
src/navigation/scripts/: four_point_nav.py  robot_runner.cpp  robot_runner_single_goal.cpp  tf_pub.cpp
src/navigation/worlds/: mv_world.world  new2_world.world  new3_world.world  new4_world.world  new5_world.world  new_world.world
src/navigation/worlds/my_world/: model.sdf
src/navigation/worlds/my_world/main_boundry/: model.config  model.sdf
src/navigation/worlds/my_world/main_boundry/Untitled/: model.sdf
src/simulation/mujoco/launch/: simulation_launch.py
src/simulation/mujoco/src/: MuJoCoMessageHandler.cpp
(+198 files in other folders)
